--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color: #00ABB3;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -60,7 +60,8 @@ form {
 
 .main-header__item a {
   text-decoration: none;
-  color: white;
+  /* color: white; */
+  color: #3C2317;
 }
 
 .main-header__item a:hover,
@@ -110,7 +111,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: #00695c;
+  background: #00ABB3;
   color: white;
   border-radius: 3px;
 }
@@ -192,8 +193,9 @@ form {
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid #00695c;
-  color: #00695c;
+  /* border: 1px solid #00695c; */
+  border: 1px solid #00ABB3;
+  color: #00ABB3;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -201,7 +203,7 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: #00695c;
+  background-color: #00ABB3;
   color: white;
 }
 
