--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,6 +17,13 @@
                     </li>
                 <% }) %> 
             </ul>
+            <hr>
+            <div class="centered">
+                <form action="/new-order" method="post">
+                    <button type="submit" class="btn">Order Now!</button>
+                </form>
+            </div>
+           
         <% }else{ %> 
             <h1>No Products in Cart!</h1>
         <% } %> 
